[gd_scene load_steps=3 format=2]

[ext_resource path="res://MapUIs/GalaxyMap/SystemInfoBG.png" type="Texture" id=1]
[ext_resource path="res://OnFootAssets/UI/ShopMenu.gd" type="Script" id=2]

[node name="ShopMenu" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 2 )

[node name="NinePatchRect" type="NinePatchRect" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
texture = ExtResource( 1 )
region_rect = Rect2( 0, 0, 830, 1530 )
patch_margin_left = 120
patch_margin_top = 110
patch_margin_right = 120
patch_margin_bottom = 100

[node name="BuildingsList" type="ItemList" parent="NinePatchRect"]
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
margin_top = -500.0
margin_bottom = -250.0

[node name="ShopTitle" type="Label" parent="NinePatchRect"]
anchor_right = 1.0
margin_bottom = 50.0
text = "Resource Conversion Station"
align = 1
valign = 1

[node name="SectionTitle" type="Label" parent="NinePatchRect"]
anchor_right = 1.0
margin_top = 50.0
margin_bottom = 100.0
text = "Buildings"
align = 1
valign = 1

[node name="SectionTitle2" type="Label" parent="NinePatchRect"]
anchor_right = 1.0
margin_top = 350.0
margin_bottom = 400.0
text = "Defenses"
align = 1
valign = 1

[node name="DefensesList" type="ItemList" parent="NinePatchRect"]
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
margin_top = -200.0

[connection signal="item_activated" from="NinePatchRect/BuildingsList" to="." method="_on_BuildingsList_item_activated"]
[connection signal="item_activated" from="NinePatchRect/DefensesList" to="." method="_on_DefensesList_item_activated"]
